<resources>
    <string name="app_name">智能刀具管理系统</string>
    <string name="V01C01">刀具管理</string>
    <string name="V01C02">系统设置</string>
    <string name="V01C03">初始化</string>
    <string name="C01S001">新刀入库</string>
    <string name="C01S002">清空RFID标签</string>
    <string name="C01S003">换领出库</string>
    <string name="C01S004">补领出库</string>
    <string name="C01S005">刀具报废</string>
    <string name="C01S007">标签置换</string>
    <string name="C01S008">刀具拆分</string>
    <string name="C01S009">刀具组装</string>
    <string name="C01S010">刀具换装</string>
    <string name="C01S011">安上设备</string>
    <string name="C01S013">卸下设备</string>
    <string name="C01S015">库房盘点</string>
    <string name="C01S017">回厂确认</string>
    <string name="C01S018">厂内修磨</string>
    <string name="C01S019">厂外修磨</string>
    <string name="C01S023">单品绑定</string>
    <string name="C01S024">快速查询</string>
    <string name="C02S001">屏幕亮度</string>
    <string name="C02S002">读头信号</string>
    <string name="c01s001_002_001">请输入入库数量</string>
    <string name="c01s002_001_001">请选择要清空标签的种类</string>
    <string name="c01s002_002_001">请扫描要清空的RFID标签</string>
    <string name="c01s002_003_001">清空RFID标签完成</string>
    <string name="c01s003_003_001">领刀完成</string>
    <string name="c01s004_004_001">补领完成</string>
    <string name="c01s005_000_001">请选择要报废刀具的类型</string>
    <string name="c01s005_001_000">报废单品刀</string>
    <string name="c01s005_001_001">请点击加号并输入要报废的单品刀具材料号</string>
    <string name="c01s005_002_001">请确认要报废的单品刀具</string>
    <string name="c01s005_003_001">报废状态：</string>
    <string name="c01s005_003_002">报废原因：</string>
    <string name="c01s005_004_001">刀具报废完成</string>
    <string name="c01s005_011_000">报废一体刀</string>
    <string name="c01s005_011_001">请扫描要报废的一体刀标签</string>
    <string name="c01s005_012_001">请确认要报废的一体刀</string>
    <string name="c01s005_101_000">报废筒刀</string>
    <string name="c01s005_101_001">请扫描要报废的筒刀标签</string>
    <string name="c01s005_102_001">请确认要报废的筒刀</string>
    <string name="c01s008_001_001">请扫描要拆分的合成刀具标签</string>
    <string name="c01s009_001_001">请扫描要组装的合成刀具标签</string>
    <string name="c01s009_001_002">请输入要组装的合成刀具编码</string>
    <string name="c01s009_003_001">该合成刀具未进行拆分 不能进行刀具组装</string>
    <string name="c01s010_001_001">请扫描要换装的合成刀具标签</string>
    <string name="c01s010_002_001">请输入换装数量和丢刀数量</string>
    <string name="c01s010_003_001">请确认换装数量和丢刀数量</string>
    <string name="c01s010_004_001">刀具换装完成</string>
    <string name="c01s011_001_001">请扫描要安上设备的合成刀</string>
    <string name="c01s011_002_001">请选择或扫描要安上的设备</string>
    <string name="c01s011_002_002">请选择对应的轴号</string>
    <string name="c01s011_003_001">装入设备</string>
    <string name="c01s011_004_001">安上设备完成</string>
    <string name="c01s013_000_001">卸下合成刀</string>
    <string name="c01s013_000_002">卸下专用刀</string>
    <string name="c01s013_001_001">请扫描要卸下的合成刀具</string>
    <string name="c01s013_002_003">卸下原因</string>
    <string name="c01s013_002_004">零部件</string>
    <string name="c01s013_002_005">加工数量</string>
    <string name="c01s013_003_001">卸下设备（砂轮、毛刷、珩磨头）完成</string>
    <string name="c01s013_011_001">请扫描要卸下的设备</string>
    <string name="c01s013_012_002">卸下数量</string>
    <string name="c01s015_001_001">请扫描或查询要盘点的库位标签</string>
    <string name="c01s015_001_002">请输入要盘点的材料号，再点击查询按钮</string>
    <string name="c01s015_002_001">在库数量</string>
    <string name="c01s015_002_002">实际数量</string>
    <string name="c01s015_002_003">请输入实际在库数量</string>
    <string name="c01s015_003_001">库房盘点完成</string>
    <string name="c01s017_000_001">请选择要回厂的订单</string>
    <string name="c01s017_000_002">请确认材料号和回厂数量</string>
    <string name="c01s017_001_001">请将回厂的一体刀按照刀身上的激光码一一找回原有的标签及卡片，点击扫描按钮扫描这些标签</string>
    <string name="c01s017_001_002">请点击加号并输入要回厂的材料号，再点击查询按钮</string>
    <string name="c01s017_001_003">无可回厂的刀具</string>
    <string name="c01s017_001_004">请输入实际回厂数量</string>
    <string name="c01s017_001_005">实际回厂数量不能大于可回厂数量</string>
    <string name="c01s017_001_006">回厂单号：</string>
    <string name="c01s017_001_007">当前标签已扫描，请勿重复扫描</string>
    <string name="c01s017_001_008">当前材料号已存在，请勿重复输入</string>
    <string name="c01s017_001_009">实际回厂数量不能为0</string>
    <string name="c01s017_003_001">回厂确认完成</string>
    <string name="c01s018_001_001">请选择修磨设备或点击扫描按钮并扫描修模设备上的标签</string>
    <string name="c01s018_001_002">请选择要修磨的刀具类型</string>
    <string name="c01s018_002_001">无厂内修磨数据</string>
    <string name="c01s018_005_001">修磨完成</string>
    <string name="c01s018_012_002">该标签已扫描，请勿重复扫描</string>
    <string name="c01s018_012_003">没有出厂数据</string>
    <string name="c01s018_012_004">该一体刀已经完成修磨，是否再次修磨？</string>
    <string name="c01s018_012_005">厂内修磨数量不能为零</string>
    <string name="c01s019_001_001">请扫描要出厂刀具的标签，或点击加号输入要出厂刀具的材料号</string>
    <string name="c01s019_001_002">请将数据填入已有空行</string>
    <string name="c01s019_001_003">请输入修磨的材料号</string>
    <string name="c01s019_001_004">请输入修磨的数量</string>
    <string name="c01s019_001_005">请点击加号，并输入要出厂修磨的材料号</string>
    <string name="c01s019_001_006">厂外修磨数量不能为0</string>
    <string name="c01s019_002_001">请选择出厂修磨的厂家</string>
    <string name="c01s019_003_001">出厂成功</string>
    <string name="c01s023_001_001">若刀身上没有激光码请点击生成按钮生成激光码后点击扫描按钮扫描空标签；若刀身上有激光码请手动输入刀身上的激光码，点击扫描按钮扫描空标签</string>
    <string name="c01s023_001_002">请输入激光码</string>
    <string name="c01s023_001_003">请输入激光码的前半部分</string>
    <string name="c01s023_001_004">请将激光码位数补全</string>
    <string name="c01s023_002_001">单品绑定完成</string>
    <string name="c01s023_002_002">请选择平均加工量</string>
    <string name="c01s024_001_001">请扫描要查询的标签</string>
    <string name="c02s001_001_001">请调整屏幕亮度</string>
    <string name="c03s000_000_001">刀具初始化</string>
    <string name="c03s000_000_002">员工卡初始化</string>
    <string name="c03s000_000_003">设备初始化</string>
    <string name="c03s000_001_001">合成刀具初始化</string>
    <string name="c03s000_001_002">库位标签初始化</string>
    <string name="c03s000_001_003">筒刀初始化</string>
    <string name="c03s000_002_001">加工设备初始化</string>
    <string name="c03s000_002_002">修磨设备初始化</string>
    <string name="c03s001_001_001">请输入合成刀具编码后点击查询按钮，或扫描已初始化好的合成刀具标签</string>
    <string name="c03s001_001_002">请输入合成刀具编码</string>
    <string name="c03s001_002_001">可刃磨钻头</string>
    <string name="c03s001_002_002">可刃磨刀片</string>
    <string name="c03s001_002_003">一次性刀片</string>
    <string name="c03s001_002_004">辅具</string>
    <string name="c03s001_002_005">其他</string>
    <string name="c03s001_002_006">配套</string>
    <string name="c03s001_003_001">请点击扫描按钮并扫描空标签</string>
    <string name="c03s001_003_002">当前扫描数量：</string>
    <string name="c03s001_003_003">返回后所有初始化数据将会清空</string>
    <string name="c03s001_003_006">扫描数量不能为0，请点击扫描按钮，完成初始化动作</string>
    <string name="c03s001_004_001">合成刀具初始化完成</string>
    <string name="c03s002_001_001">请输入要初始化的库位标签的材料号</string>
    <string name="c03s002_001_002">请输入材料号</string>
    <string name="c03s002_002_001">该材料号对应的库位已经初始化，是否重新初始化？</string>
    <string name="c03s002_002_002">当前标签已经初始化，是否重新初始化？</string>
    <string name="c03s002_003_001">请输入初始化\n该材料号的数量</string>
    <string name="c03s002_003_002">请输入数量</string>
    <string name="c03s002_003_003">该库位材料号的数量不能为空</string>
    <string name="c03s002_004_001">库位标签初始化完成</string>
    <string name="c03s003_001_001">请扫描一个空标签用来绑定加工设备</string>
    <string name="c03s003_001_002">未查询到流水线和设备，请到管理平台进行添加</string>
    <string name="c03s003_001_003">请选择要初始化的流水线</string>
    <string name="c03s003_001_004">请选择要初始化的设备</string>
    <string name="c03s003_002_001">加工设备绑定成功</string>
    <string name="c03s004_001_001">请扫描一个空标签用来绑定修磨设备</string>
    <string name="c03s004_001_002">未查询到刃磨设备，请到管理平台进行添加</string>
    <string name="c03s004_001_003">当前设备已经初始化，是否重新初始化？</string>
    <string name="c03s004_001_004">请选择要初始化的修磨设备</string>
    <string name="c03s004_002_001">修磨设备绑定成功</string>
    <string name="c03s005_001_001">请输入员工号</string>
    <string name="c03s005_001_002">请输入员工号后再点击查询按钮</string>
    <string name="c03s005_002_001">当前员工号已经初始化，是否重新初始化?</string>
    <string name="c03s005_003_001">员工卡绑定成功</string>
    <string name="c03s006_001_001">请输入完整的筒刀编码后点击查询按钮，或输入筒刀单品编码后扫描已初始化好的筒刀标签</string>
    <string name="c03s006_001_002">筒刀编码</string>
    <string name="c03s006_001_003">请输入筒刀的单品编码</string>
    <string name="c03s006_001_004">请输入完整的筒刀编码</string>
    <string name="c03s006_002_001">请输入修磨次数</string>
    <string name="c03s006_004_001">筒刀初始化完成</string>
    <string name="overtimeToast">长时间未进行扫描！</string>
    <string name="netConnection">请确认网络是否连接</string>
    <string name="netConnectionError">网络连接异常</string>
    <string name="prompt">提示</string>
    <string name="number">数量</string>
    <string name="type">类型</string>
    <string name="colon">：</string>
    <string name="processingCapacity">加工量</string>
    <string name="averageProcessingCapacity">平均加工量</string>
    <string name="authorization">授权</string>
    <string name="inputAuthorization">输入授权</string>
    <string name="pleaseInputUserName">请输入用户名</string>
    <string name="pleaseInputPassWord">请输入用密码</string>
    <string name="scanAuthorization">刷卡授权</string>
    <string name="c02s003_001">请选择您要注册的部门</string>
    <string name="mainMenu">主菜单</string>
    <string name="toolsManagement">刀具管理</string>
    <string name="systemSettings">系统设置</string>
    <string name="initialization">初始化</string>
    <string name="serialNumber">序号</string>
    <string name="materialNumber">材料号</string>
    <string name="singleProductCode">单品编码</string>
    <string name="syntheticTool">合成刀具</string>
    <string name="syntheticToolCoding">合成刀具编码</string>
    <string name="tubeKnifeCoding">筒刀编码</string>
    <string name="toolType">刀具类型</string>
    <string name="danKnife">单品刀</string>
    <string name="oneKnife">一体刀</string>
    <string name="tubeKnife">筒刀</string>
    <string name="orderNumber">订单号</string>
    <string name="orderNumber1">订单序号</string>
    <string name="batch">批次</string>
    <string name="libraryCode">库位码</string>
    <string name="applyQuantity">申请数量</string>
    <string name="inventoryQuantity">库存数量</string>
    <string name="outboundQuantity">出库数量</string>
    <string name="applicant">申请人</string>
    <string name="applicantTime">申请时间</string>
    <string name="scrapQuantity">报废数量</string>
    <string name="scrapQuantityGroup">报废数量（组）</string>
    <string name="grindingQuantity">修磨数量</string>
    <string name="grindingTimes">修磨次数</string>
    <string name="toolNumber">刀具数量</string>
    <string name="reloadingNumber">换装数量</string>
    <string name="loseToolNumber">丢刀数量</string>
    <string name="returnedQuantity">可回厂数量</string>
    <string name="actualReturnedQuantity">实际回厂数量</string>
    <string name="generate">生成</string>
    <string name="assemblyLine">流水线</string>
    <string name="deviceName">设备名称</string>
    <string name="axle">轴</string>
    <string name="employeeNumber">员工号</string>
    <string name="name">姓名</string>
    <string name="department">部门</string>
    <string name="login">登录</string>
    <string name="reSet">重置</string>
    <string name="inputLogin">输入登录</string>
    <string name="signLogin">刷卡登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="scan">扫描</string>
    <string name="stop">停止</string>
    <string name="search">查询</string>
    <string name="cancel">取消</string>
    <string name="returnBy">返回</string>
    <string name="operate">操作</string>
    <string name="next">下一步</string>
    <string name="submit">提交</string>
    <string name="confirm">确定</string>
    <string name="save">保存</string>
    <string name="sign">签收</string>
    <string name="inputSign">输入签收</string>
    <string name="scanSign">刷卡签收</string>
    <string name="keepOn">继续</string>
    <string name="complete">完成</string>
    <string name="onlyAllowInputNumbers">1234567890</string>
    <string name="allowInput">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_/#-().</string>
    <string name="C01S101">清空RFID标签</string>
    <string name="renewalTool_FDP">换领出库</string>
</resources>