<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/OverallSituationLinerLayoutStyle">

    <TextView
        android:text="@string/C01S015"
        style="@style/FunctionalTitleTextViewStyle" />

    <LinearLayout style="@style/MiddleLinerLayoutStyle">

        <TextView
            android:text="@string/c01s015_001_001"
            android:layout_weight="2.5"
            style="@style/MiddleTextPromptStule" />

        <EditText
            android:id="@+id/et_01"
            android:hint="@string/c03s002_001_002"
            android:maxLength="10"
            android:digits="@string/allowInput"
            style="@style/MiddleEditTextStyle" />

        <View style="@style/View_1" />

        <LinearLayout style="@style/MiddleTwoButtonLinerLayoutStyle">

            <Button
                android:id="@+id/btnScan"
                android:text="@string/scan"
                style="@style/TwoButtonStyle" />

            <Button
                android:id="@+id/btnSearch"
                android:text="@string/search"
                style="@style/TwoButtonStyle" />

        </LinearLayout>

        <View style="@style/View_1" />

    </LinearLayout>

    <LinearLayout style="@style/BottomLinerLayoutStyle">

        <Button
            android:text="@string/cancel"
            android:onClick="btnCancel"
            style="@style/BottomButtonStyle" />

        <View style="@style/BottomLittlePartingLineStyle" />

        <Button
            android:text="@string/returnBy"
            android:onClick="btnReturn"
            style="@style/BottomButtonStyle" />

    </LinearLayout>

</LinearLayout>