<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/OverallSituationLinerLayoutStyle">

    <TextView
        android:text="@string/c03s000_001_002"
        style="@style/FunctionalTitleTextViewStyle" />

    <LinearLayout style="@style/MiddleLinerLayoutStyle">

        <TextView
            android:text="@string/c03s002_003_001"
            android:layout_weight="2.5"
            style="@style/MiddleTextPromptStule" />

        <EditText
            android:id="@+id/et_01"
            android:hint="@string/c03s002_003_002"
            android:maxLength="5"
            android:inputType="number"
            android:digits="@string/onlyAllowInputNumbers"
            style="@style/MiddleEditTextStyle" />

        <Button
            android:id="@+id/btnSubmit"
            android:text="@string/submit"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            style="@style/OneButtonStyle" />

    </LinearLayout>

    <LinearLayout style="@style/BottomLinerLayoutStyle">

        <Button
            android:text="@string/cancel"
            android:onClick="btnCancel"
            style="@style/BottomButtonStyle" />

        <View style="@style/BottomLittlePartingLineStyle" />

        <Button
            android:text="@string/returnBy"
            android:onClick="btnReturn"
            style="@style/BottomButtonStyle" />

    </LinearLayout>

</LinearLayout>