<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/OverallSituationLinerLayoutStyle">

    <TextView
        android:text="@string/C01S018"
        style="@style/FunctionalTitleTextViewStyle" />

    <LinearLayout style="@style/MiddleLinerLayoutStyle">

        <TextView
            style="@style/MiddleTextPromptStule"
            android:layout_weight="3"
            android:text="@string/c01s018_001_002" />

        <Button
            style="@style/OneButtonStyle"
            android:onClick="btnDanKnife"
            android:text="@string/danKnife" />

        <View style="@style/View_1" />

        <Button
            style="@style/OneButtonStyle"
            android:onClick="btnOneKnife"
            android:text="@string/oneKnife" />

        <View
            style="@style/View_1"
            android:layout_weight="1.5" />

    </LinearLayout>

    <LinearLayout style="@style/BottomLinerLayoutStyle">

        <Button
            android:text="@string/cancel"
            android:onClick="btnCancel"
            style="@style/BottomButtonStyle" />

        <View style="@style/BottomLittlePartingLineStyle" />

        <Button
            android:text="@string/returnBy"
            android:onClick="btnReturn"
            style="@style/BottomButtonStyle" />

    </LinearLayout>

</LinearLayout>