<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/OverallSituationLinerLayoutStyle">

    <TextView
        android:text="@string/c03s000_001_001"
        style="@style/FunctionalTitleTextViewStyle" />

    <LinearLayout style="@style/MiddleLinerLayoutStyle">

        <TextView
            android:text="@string/c03s001_003_001"
            android:layout_weight="2"
            style="@style/MiddleTextPromptStule" />

        <TextView
            android:id="@+id/tv_01"
            android:layout_weight="2"
            style="@style/MiddleTextPromptStule" />

        <LinearLayout style="@style/MiddleTwoButtonLinerLayoutStyle">

            <Button
                android:id="@+id/btnScan"
                android:text="@string/scan"
                style="@style/TwoButtonStyle" />

            <Button
                android:id="@+id/btnStop"
                android:text="@string/stop"
                style="@style/TwoButtonStyle" />

        </LinearLayout>

        <View style="@style/View_1" />

    </LinearLayout>

    <LinearLayout style="@style/BottomLinerLayoutStyle">

        <Button
            android:text="@string/returnBy"
            android:onClick="btnReturn"
            style="@style/BottomButtonStyle" />

        <View style="@style/BottomLittlePartingLineStyle" />

        <Button
            android:id="@+id/btnSubmit"
            android:text="@string/submit"
            android:onClick="btnSubmit"
            style="@style/BottomButtonStyle" />

    </LinearLayout>

</LinearLayout>