<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/OverallSituationLinerLayoutStyle">

    <TextView
        android:text="@string/C01S013"
        style="@style/FunctionalTitleTextViewStyle" />

    <LinearLayout style="@style/MiddleLinerLayoutStyle">

        <View style="@style/View_1" />

        <Button
            android:text="@string/c01s013_000_001"
            android:onClick="synthesis"
            style="@style/OneButtonStyle" />

        <View style="@style/View_1" />

        <Button
            android:text="@string/c01s013_000_002"
            android:onClick="grinding"
            style="@style/OneButtonStyle" />

        <View
            style="@style/View_1"
            android:layout_weight="1.5" />

    </LinearLayout>

    <LinearLayout style="@style/BottomLinerLayoutStyle">

        <Button
            android:text="@string/cancel"
            android:onClick="btnCancel"
            style="@style/BottomButtonStyle" />

        <View style="@style/BottomLittlePartingLineStyle" />

        <Button
            android:text="@string/returnBy"
            android:onClick="btnReturn"
            style="@style/BottomButtonStyle" />

    </LinearLayout>

</LinearLayout>