<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="start|center"
        android:layout_marginLeft="10dp"
        android:text="@string/materialNumber"
        android:textSize="20sp"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/etmaterialNumber"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:hint="@string/c01s019_001_003"
        android:maxLength="6"
        android:digits="@string/allowInput"
        style="@style/MiddleEditTextStyle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="0.5"
        android:gravity="start|center"
        android:text="报废数量"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etgrindingQuantity"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:hint="@string/c01s019_001_004"
        android:maxLength="5"
        android:digits="@string/onlyAllowInputNumbers"
        style="@style/MiddleEditTextStyle" />

    <View
        android:layout_weight="0.3"
        style="@style/View_1" />

    <LinearLayout style="@style/MiddleTwoButtonLinerLayoutStyle">

        <Button
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:textSize="20sp"
            style="@style/TwoButtonStyle" />

        <Button
            android:id="@+id/btnConfirm"
            android:text="@string/confirm"
            android:textSize="20sp"
            style="@style/TwoButtonStyle" />

    </LinearLayout>

    <View
        android:layout_weight="0.3"
        style="@style/View_1" />

</LinearLayout>