<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/OverallSituationLinerLayoutStyle">

    <TextView
        android:text="@string/c03s000_001_003"
        style="@style/FunctionalTitleTextViewStyle" />

    <LinearLayout style="@style/MiddleLinerLayoutStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0.7"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/tubeKnifeCoding"
                android:textSize="20sp"
                android:textColor="@color/baseColor" />

            <TextView
                android:id="@+id/tv_01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textSize="20sp"
                android:textColor="@color/edittextColor" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

            <TableRow style="@style/TableRowStyle">

                <TextView
                    android:text="@string/materialNumber"
                    android:layout_height="40dp"
                    style="@style/TableRowTextViewStyle" />

                <TextView
                    android:text="@string/number"
                    style="@style/TableRowTextViewStyle" />

                <TextView
                    android:text="@string/type"
                    style="@style/TableRowTextViewStyle" />

            </TableRow>

        </TableLayout>

        <ListView
            android:id="@+id/lv_01"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@drawable/border_no_radius"
            android:scrollbars="none" />

        <Button
            android:id="@+id/btnScan"
            android:text="@string/scan"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            style="@style/OneButtonStyle" />

    </LinearLayout>

    <LinearLayout style="@style/BottomLinerLayoutStyle">

        <Button
            android:text="@string/cancel"
            android:onClick="btnCancel"
            style="@style/BottomButtonStyle" />

        <View style="@style/BottomLittlePartingLineStyle" />

        <Button
            android:text="@string/returnBy"
            android:onClick="btnReturn"
            style="@style/BottomButtonStyle" />

    </LinearLayout>

</LinearLayout>