<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/OverallSituationLinerLayoutStyle">

    <TextView
        android:text="@string/C01S017"
        style="@style/FunctionalTitleTextViewStyle" />

    <LinearLayout style="@style/MiddleLinerLayoutStyle">

        <TextView
            android:text="@string/c01s017_000_001"
            android:layout_weight="3"
            style="@style/MiddleTextPromptStule" />

        <LinearLayout
            android:id="@+id/ll_01"
            style="@style/SpinnerLinerLayoutStyle">

            <TextView
                android:id="@+id/tv_01"
                style="@style/SpinnerViewStyle" />

            <ImageView
                android:src="@drawable/spinnerdropdown"
                style="@style/SpinnerImageViewStyle" />

        </LinearLayout>

        <View
            android:layout_weight="4"
            style="@style/View_1" />

    </LinearLayout>

    <LinearLayout style="@style/BottomLinerLayoutStyle">

        <Button
            android:text="@string/returnBy"
            android:onClick="btnReturn"
            style="@style/BottomButtonStyle" />

        <View style="@style/BottomLittlePartingLineStyle" />

        <Button
            android:text="@string/next"
            android:onClick="btnNext"
            style="@style/BottomButtonStyle" />

    </LinearLayout>

</LinearLayout>