<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/OverallSituationLinerLayoutStyle">

    <TextView
        android:text="@string/login"
        style="@style/FunctionalTitleTextViewStyle" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@drawable/logo"/>

    <View style="@style/View_1" />

    <Button
        android:id="@+id/btnInputLogin"
        android:text="@string/inputLogin"
        style="@style/OneButtonStyle" />

    <View style="@style/View_1" />

    <Button
        android:id="@+id/btnScanLogin"
        android:text="@string/signLogin"
        style="@style/OneButtonStyle" />

    <View
        android:layout_weight="1.25"
        style="@style/View_1" />

</LinearLayout>